--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "lint": "next lint",
     "db:gen": "drizzle-kit generate --name",
     "db:push": "supabase db push",
-    "db:migrate": "drizzle-kit generate --name update && supabase db push"
+    "db:migrate": "drizzle-kit generate --name update && supabase db push",
+    "scrape": "npx tsx scripts/scrape-evolution-news.ts",
+    "process-articles": "npx tsx scripts/process-scraped-data.ts",
+    "scrape-videos": "npx tsx scripts/scrape-videos.ts",
+    "process-videos": "npx tsx scripts/process-video-data.ts",
+    "scrape-navigation": "npx tsx scripts/scrape-navigation-social.ts"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.1",
@@ -16,6 +21,9 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/cheerio": "^1.0.0",
+    "axios": "^1.11.0",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
@@ -41,6 +49,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.20.3",
     "typescript": "^5"
   }
 }
